--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 VITE_MAPILLARY_CLIENT_TOKEN=your_mapillary_client_token_here
-VITE_WS_URL=ws://localhost:3101
-VITE_API_URL=http://localhost:3101
+VITE_WS_URL=wss://jgeo.opus.riumu.net/ws
+VITE_API_URL=https://jgeo.opus.riumu.net
